[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/Component/AnswerContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/Component/Mail.gd" type="Script" id=2]
[ext_resource path="res://GUI/Component/MailContentContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Component/FromContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Component/ObjectContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Graphics/Button_MailExit.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="Mail" type="MarginContainer"]
margin_right = 1500.0
margin_bottom = 809.0
rect_min_size = Vector2( 1500, 809 )
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1500.0
margin_bottom = 809.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MailBodyContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectContainer" parent="Panel/MailBodyContainer" instance=ExtResource( 5 )]
margin_right = 1500.0
margin_bottom = 94.0
mouse_filter = 2

[node name="FromContainer" parent="Panel/MailBodyContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 98.0
margin_right = 1500.0
margin_bottom = 202.0
mouse_filter = 2
custom_constants/margin_top = 10
custom_constants/margin_left = 100

[node name="MailContentContainer" parent="Panel/MailBodyContainer" instance=ExtResource( 3 )]
margin_right = 1500.0
mouse_filter = 2

[node name="AnswerContainer" parent="Panel/MailBodyContainer" instance=ExtResource( 1 )]
margin_right = 1500.0
margin_bottom = 770.0
custom_constants/margin_top = 20

[node name="TextureRect" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -157.0
margin_top = 17.0
margin_right = -38.0
margin_bottom = 127.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/TextureRect" to="." method="_on_TextureRect_pressed"]
